--- a/workflows/Office_365_Analysis_with_Palo_Alto_Wildfire/workflow.spec.yaml
+++ b/workflows/Office_365_Analysis_with_Palo_Alto_Wildfire/workflow.spec.yaml
@@ -9,6 +9,6 @@ tags:
 - phishing
 - email
 - office365
-attributes:
+resources:
   source_url: https://github.com/rapid7/insightconnect-workflows
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
