--- a/workflows/Splunk_App_SSH_Alert_IP_Enrichment/workflow.spec.yaml
+++ b/workflows/Splunk_App_SSH_Alert_IP_Enrichment/workflow.spec.yaml
@@ -9,6 +9,6 @@ tags:
 - phishing
 - email
 - office365
-attributes:
+resources:
   source_url: https://github.com/rapid7/insightconnect-workflows
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
