--- a/workflows/Office_365_Analysis/workflow.spec.yaml
+++ b/workflows/Office_365_Analysis/workflow.spec.yaml
@@ -11,6 +11,10 @@ tags:
 - phishing
 - email
 - office365
+hub_tags:
+  use_cases: []
+  keywords: [phishing, email, office365]
+  features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
