--- a/workflows/Office_365_Analysis_with_Virus_Total/workflow.spec.yaml
+++ b/workflows/Office_365_Analysis_with_Virus_Total/workflow.spec.yaml
@@ -14,3 +14,22 @@ hub_tags:
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Office_365_Analysis_with_Virus_Total
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
+  screenshots:
+  - name: screenshots/artifacts1.png
+    title: Artifact Example 1
+  - name: screenshots/artifacts2.png
+    title: Artifact Example 2
+  - name: screenshots/artifacts3.png
+    title: Artifact Example 3
+  - name: screenshots/workflow1.png
+    title: Workflow View 1
+  - name: screenshots/workflow2.png
+    title: Workflow View 2
+  - name: screenshots/workflow3.png
+    title: Workflow View 3
+  - name: screenshots/file_analysis_loop.png
+    title: Workflow View 4
+  - name: screenshots/url_analysis_inner_loop.png
+    title: Workflow View 5
+  - name: screenshots/url_analysis_outter_loop.png
+    title: Workflow View 6
