--- a/workflows/Post_Gmail_Phishing_Alerts_to_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Post_Gmail_Phishing_Alerts_to_Microsoft_Teams/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [phishing, email, microsoft, work_from_home, teams, gmail, phishing]
+  keywords: [phishing, email, microsoft, work_from_home, teams, gmail]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Post_Gmail_Phishing_Alerts_to_Microsoft_Teams
