update formating and ss

--- a/workflows/Post_Gmail_Phishing_Alerts_to_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Post_Gmail_Phishing_Alerts_to_Microsoft_Teams/workflow.spec.yaml
@@ -23,3 +23,7 @@ resources:
     title: Workflow View
   - name: teams_flow1.png
     title: Example Message to Microsoft Teams
+  - name: artifact1.png
+    title: Top Level Headers Artifact
+  - name: artifact1.png
+    title: URL's Identified Artifact
