--- a/workflows/Lookup_Vulnerable_Hosts_From_Slack/workflow.spec.yaml
+++ b/workflows/Lookup_Vulnerable_Hosts_From_Slack/workflow.spec.yaml
@@ -17,7 +17,7 @@ resources:
   screenshots:
   - name: execution1.png
     title: Workflow Execution in Slack
-  - name: Workflow1.png
+  - name: workflow1.png
     title: Workflow Builder View
-  - name: Job1.png
+  - name: job1.png
     title: Workflow Job
