--- a/workflows/InsightVM_Top_25_Remediations_to_ServiceNow/workflow.spec.yaml
+++ b/workflows/InsightVM_Top_25_Remediations_to_ServiceNow/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect", "insightvm"]
 name: InsightVM_Top_25_Remediations_to_ServiceNow
-title: "IVM Top Remediations to ServiceNow"
+title: "Create Solution-Based Tickets with ServiceNow from InsightVM"
 description: "This workflow creates solution-based tickets in ServiceNow for each of the top 25 remediations in InsightVM.  If there is already a ticket open for a given remediation, the workflow updates the existing ticket with a current list of impacted assets."
 version: 1.0.2
 vendor: rapid7
