--- a/workflows/Top_Remediations_For_Asset_In_Slack/workflow.spec.yaml
+++ b/workflows/Top_Remediations_For_Asset_In_Slack/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect", "insightvm"]
 name: Top_Remediations_From_Slack
-title: "Get InsightVM Top Remediations from Slack"
+title: "Lookup Top Remediations with InsightVM from Slack"
 description: Lookup and receive the top 10 remediation steps from InsightVM for a given host, asset group, site, or tag from a Slack message.
 version: 1.1.1
 vendor: rapid7
