--- a/workflows/Virtually_Patch_Vulnerabilities_found_by_InsightVM_with_Deep_Security/workflow.spec.yaml
+++ b/workflows/Virtually_Patch_Vulnerabilities_found_by_InsightVM_with_Deep_Security/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect"]
-name: Integration_of_InsightVM_and_Deep_Security_Virtual_Patching
-title: "Integration of InsightVM and Deep Security Virtual Patching"
+name: Virtually_Patch_Vulnerabilities_found_by_InsightVM_with_Deep_Security
+title: "Virtually Patch Vulnerabilities found by InsightVM with Deep Security"
 description: Automatically protect your assets against exploitation of vulnerabilities found by InsightVM with Deep Security virtual patching.
 version: 1.0.0
 vendor: rapid7
@@ -9,10 +9,10 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [vulnerability_management, remediation_management]
-  keywords: [vulnerability_management, remediation_management, insightvm, trend_micro, deep_security, virtual_patching, intrusion_prevention]
+  keywords: [insightvm, trend_micro, deep_security, virtual_patching, intrusion_prevention]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Integration_of_InsightVM_and_Deep_Security_Virtual_Patching
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Virtually_Patch_Vulnerabilities_found_by_InsightVM_with_Deep_Security
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
   - name: workflow01.png
