--- a/workflows/Virtually_Patch_Vulnerabilities_found_by_InsightVM_with_Deep_Security/workflow.spec.yaml
+++ b/workflows/Virtually_Patch_Vulnerabilities_found_by_InsightVM_with_Deep_Security/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
-products: ["insightconnect"]
-name: Virtually_Patch_Vulnerabilities_found_by_InsightVM_with_Deep_Security
-title: "Virtually Patch Vulnerabilities found by InsightVM with Deep Security"
+products: ["insightconnect", "insightvm"]
+name: Virtually_Patch_Vulnerabilities_Found_by_InsightVM_with_Deep_Security
+title: "Virtually Patch Vulnerabilities Found by InsightVM with Deep Security"
 description: Automatically protect your assets against exploitation of vulnerabilities found by InsightVM with Deep Security virtual patching.
 version: 1.0.0
 vendor: rapid7
@@ -12,7 +12,7 @@ hub_tags:
   keywords: [insightvm, trend_micro, deep_security, virtual_patching, intrusion_prevention]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Virtually_Patch_Vulnerabilities_found_by_InsightVM_with_Deep_Security
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Virtually_Patch_Vulnerabilities_Found_by_InsightVM_with_Deep_Security
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
   - name: workflow01.png
