--- a/workflows/Virtually_Patch_Vulnerabilities_found_by_InsightVM_with_Deep_Security/workflow.spec.yaml
+++ b/workflows/Virtually_Patch_Vulnerabilities_found_by_InsightVM_with_Deep_Security/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect", "insightvm"]
-name: Virtually_Patch_Vulnerabilities_Found_by_InsightVM_with_Deep_Security
-title: "Virtually Patch Vulnerabilities Found by InsightVM with Deep Security"
+name: Virtually_Patch_Vulnerabilities_found_by_InsightVM_with_Deep_Security
+title: "Virtually Patch Vulnerabilities found by InsightVM with Deep Security"
 description: Automatically protect your assets against exploitation of vulnerabilities found by InsightVM with Deep Security virtual patching.
 version: 1.0.0
 vendor: rapid7
