Fix naming and add Trend Micro to the name

--- a/workflows/Virtually_Patch_Vulnerabilities_Found_by_InsightVM_with_Trend_Micro_Deep_Security/workflow.spec.yaml
+++ b/workflows/Virtually_Patch_Vulnerabilities_Found_by_InsightVM_with_Trend_Micro_Deep_Security/workflow.spec.yaml
@@ -1,9 +1,9 @@
 extension: workflow
 products: ["insightconnect", "insightvm"]
-name: Virtually_Patch_Vulnerabilities_found_by_InsightVM_with_Deep_Security
-title: "Virtually Patch Vulnerabilities found by InsightVM with Deep Security"
-description: Automatically protect your assets against exploitation of vulnerabilities found by InsightVM with Deep Security virtual patching.
-version: 1.0.1
+name: Virtually_Patch_Vulnerabilities_Found_by_InsightVM_with_Trend_Micro_Deep_Security
+title: "Virtually Patch Vulnerabilities Found by InsightVM with Trend Micro Deep Security"
+description: Automatically protect your assets against exploitation of vulnerabilities found by InsightVM with Trend Micro Deep Security.
+version: 1.0.2
 vendor: rapid7
 support: rapid7
 status: []
