Add new screenshots

--- a/workflows/Generate_CVE_Report_from_Slack/workflow.spec.yaml
+++ b/workflows/Generate_CVE_Report_from_Slack/workflow.spec.yaml
@@ -25,3 +25,7 @@ resources:
     title: Workflow Part 2
   - name: workflow3.png
     title: Workflow Part 3
+  - name: workflow4.png
+    title: Workflow Part 4
+  - name: workflow5.png
+    title: Workflow Part 5
