SOAR_2629_Update_Lookup_Vulnerability_From_Slack (#337)
* Update workflow to work in the cloud

* update human cost seconds

* update files

* revert back to original directory name

* Update workflows/Lookup_Vuln_From_Slack/workflow.spec.yaml

* Update workflow

* Update help.md

* Update Lookup_Vuln_From_Slack.icon

change humanCostSeconds and humanCostDisplayUnit

* Update icon file trigger description

* Update Lookup_Vuln_From_Slack.icon

* Update workflows/Lookup_Vuln_From_Slack/help.md

Co-authored-by: Mike Rinehart <32079048+mrinehart-r7@users.noreply.github.com>

* Update workflows/Lookup_Vuln_From_Slack/help.md

Co-authored-by: Mike Rinehart <32079048+mrinehart-r7@users.noreply.github.com>

* Update workflows/Lookup_Vuln_From_Slack/help.md

Co-authored-by: Mike Rinehart <32079048+mrinehart-r7@users.noreply.github.com>

* Update screenshots and change trigger word from lookup-vulnerability to lookup-vuln

* Update workflows/Lookup_Vuln_From_Slack/Lookup_Vuln_From_Slack.icon

Co-authored-by: Mike Rinehart <32079048+mrinehart-r7@users.noreply.github.com>

* Update workflows/Lookup_Vuln_From_Slack/Lookup_Vuln_From_Slack.icon

Co-authored-by: Jon Schipp <30870727+jschipp-r7@users.noreply.github.com>
Co-authored-by: Mike Rinehart <32079048+mrinehart-r7@users.noreply.github.com>

--- a/workflows/Lookup_Vuln_From_Slack/workflow.spec.yaml
+++ b/workflows/Lookup_Vuln_From_Slack/workflow.spec.yaml
@@ -2,8 +2,8 @@ extension: workflow
 products: ["insightconnect", "insightvm"]
 name: Lookup_Vuln_From_Slack
 title: "Lookup Vulnerability from Slack"
-description: This workflow accepts a Slack command, looks up the vulnerability in Rapid7's vulnerability database, and posts the vulnerability details back to the same Slack channel.
-version: 1.1.3
+description: "This workflow accepts a Slack command, looks up the vulnerability in Rapid7's vulnerability database, and posts the vulnerability details back to the same Slack channel."
+version: 1.1.4
 vendor: rapid7
 support: rapid7
 status: []
@@ -21,7 +21,9 @@ resources:
     title: Workflow Execution in Slack, Multiple Results
   - name: workflow.png
     title: Workflow View
+  - name: workflow2.png
+    title: Workflow Loop View
   - name: job.png
-    title: Completed Job In Slack, Multiple Results
+    title: Completed Job in Slack, Multiple Results
   - name: artifact1.png
     title: Final Report Artifact
