--- a/workflows/Enrich_CVE_with_Recorded_Future_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Enrich_CVE_with_Recorded_Future_from_Microsoft_Teams/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect"]
-name: Enrich_CVE_with_Recorded_Future_from_Slack
-title: "Enrich CVE with Recorded Future from Slack"
+name: Enrich_CVE_with_Recorded_Future_from_Microsoft_Teams
+title: "Enrich CVE with Recorded Future from Microsoft Teams"
 description: "This workflow returns enriched CVE details by performing a vulnerability lookup with Recorded Future."
 version: 1.0.0
 vendor: rapid7
@@ -20,9 +20,9 @@ resources:
     - name: workflow_loop.png
       title: Workflow Loop View
     - name: enrich_success.png
-      title: Slack message for CVE Enrich Success
+      title: Microsoft Teams Mesage for CVE Enrich Success
     - name: enrich_failure.png
-      title: Slack message for CVE Enrich Failure
+      title: Microsoft Teams Mesage for CVE Enrich Failure
     - name: artifact.png
       title: Artifact for Successful CVE Enrichment
     - name: job.png
