--- a/workflows/Enrich_CVE_with_Recorded_Future_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Enrich_CVE_with_Recorded_Future_from_Microsoft_Teams/workflow.spec.yaml
@@ -2,14 +2,14 @@ extension: workflow
 products: ["insightconnect"]
 name: Enrich_CVE_with_Recorded_Future_from_Microsoft_Teams
 title: "Enrich CVE with Recorded Future from Microsoft Teams"
-description: "This workflow returns enriched CVE details by performing a vulnerability lookup with Recorded Future."
+description: "This workflow returns enriched CVE details by performing a vulnerability lookup with Recorded Future from chat."
 version: 1.0.0
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [threat_detection_and_response]
-  keywords: [enrichment, recorded, future, cve, slack]
+  use_cases: [vulnerability_management]
+  keywords: [enrichment, recorded future, cve, teams]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Enrich_CVE_With_Recorded_Future_From_Slack
