--- a/workflows/Enrich_CVE_with_Recorded_Future_from_Slack/workflow.spec.yaml
+++ b/workflows/Enrich_CVE_with_Recorded_Future_from_Slack/workflow.spec.yaml
@@ -3,13 +3,13 @@ products: ["insightconnect"]
 name: Enrich_CVE_with_Recorded_Future_from_Slack
 title: "Enrich CVE with Recorded Future from Slack"
 description: "This workflow returns enriched CVE details by performing a vulnerability lookup with Recorded Future from chat."
-version: 1.0.0
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [vulnerability_management]
-  keywords: [enrichment, recorded future, cve, slack]
+  keywords: [enrichment, recorded_future, cve, slack, parameters]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Enrich_CVE_With_Recorded_Future_From_Slack
@@ -19,8 +19,10 @@ resources:
       title: Workflow View
     - name: workflow_loop.png
       title: Workflow Loop View
-    - name: enrich_success.png
-      title: Slack Message for CVE Enrich Success
+    - name: enrich_success_part1.png
+      title: Slack Message for CVE Enrich Success Part 1
+    - name: enrich_success_part2.png
+      title: Slack Message for CVE Enrich Success Part 2
     - name: enrich_failure.png
       title: Slack Message for CVE Enrich Failure
     - name: artifact.png
